--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"base64-arraybuffer": "^0.1.5",
+		"opentype.js": "^0.7.3",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.47.1"
+		"react-native": "0.47.1",
+		"react-native-fs": "^2.5.1",
+		"react-native-svg": "^5.4.1",
+		"react-native-view-shot": "^1.10.1",
+		"svgs": "^3.0.1"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
