--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
+		"test": "jest",
+		"dev": "next",
+		"build": "next build",
+		"startnext": "next start"
 	},
 	"dependencies": {
+		"babel-plugin-react-transform": "^2.0.2",
+		"babel-plugin-transform-async-to-generator": "^6.24.1",
+		"babel-plugin-transform-object-rest-spread": "^6.23.0",
+		"babel-preset-env": "^1.6.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-1": "^6.24.1",
 		"base64-arraybuffer": "^0.1.5",
+		"next": "^3.0.3",
 		"opentype.js": "^0.7.3",
 		"react": "16.0.0-alpha.12",
+		"react-dom": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-fs": "^2.5.1",
 		"react-native-svg": "https://github.com/msand/react-native-svg.git",
@@ -25,5 +37,10 @@
 	},
 	"jest": {
 		"preset": "react-native"
+	},
+	"rnpm": {
+		"assets": [
+			"static/fonts"
+		]
 	}
 }
