Fix next.js and react 15 compat

--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-1": "^6.24.1",
 		"base64-arraybuffer": "^0.1.5",
-		"next": "^3.0.3",
+		"next": "^3.0.6",
 		"opentype.js": "^0.7.3",
 		"react": "16.0.0-alpha.12",
 		"react-dom": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-fs": "^2.5.1",
-		"react-native-svg": "https://github.com/msand/react-native-svg.git",
+		"react-native-svg": "https://github.com/msand/react-native-svg.git#8dd795b",
 		"react-native-view-shot": "^1.10.1",
 		"svgs": "^3.0.1",
 		"victory-native": "^0.14.0"
